fix light/dark mode styles

--- a/src/components/group-card/style.css
+++ b/src/components/group-card/style.css
@@ -1,9 +1,8 @@
 .group-card {
     position: relative;
     border-radius: 10px;
-    box-shadow: 0 8px 10px rgb(15,15,15,.2);
-    padding: 10px;
-    margin-bottom: 15px;
+    box-shadow: 0 2px 4px rgb(15,15,15,.2);
+    padding: 15px;
 }
 
 .group-card h2 {
