--- a/src/pages/group-search/style.css
+++ b/src/pages/group-search/style.css
@@ -7,3 +7,9 @@
     padding: 5px;
     font-size: 25px;
 }
+
+.groups {
+    display: flex;
+    gap: 30px;
+    flex-direction: column;
+}
